--- a/templates/2_difusor/create_event.html
+++ b/templates/2_difusor/create_event.html
@@ -63,7 +63,9 @@
         {{ form.precio.errors }}
     </div>
     
-    <div>
+    
+        
+    <div class="form-check">
         {{ form.es_gratuito }}
         <label for="{{ form.es_gratuito.id_for_label }}">Evento Gratuito</label>
     </div>
