--- a/templates/3_admin/content.html
+++ b/templates/3_admin/content.html
@@ -4,6 +4,10 @@
 
 {% block title %}Contenido Pendiente - Admin{% endblock %}
 
+{% block extrahead %}
+<link rel="stylesheet" type="text/css" href="{% static 'css/3_admin/content.css' %}">
+{% endblock %}
+
 {% block content %}
 <h2>Contenido Pendiente de Aprobación</h2>
 
