--- a/templates/3_admin/solicitudes.html
+++ b/templates/3_admin/solicitudes.html
@@ -4,6 +4,10 @@
 
 {% block title %}Solicitudes de Difusor - Admin{% endblock %}
 
+{% block extrahead %}
+<link rel="stylesheet" type="text/css" href="{% static 'css/3_admin/solicitudes.css' %}">
+{% endblock %}
+
 {% block content %}
 <h2>Solicitudes de Difusor Pendientes</h2>
 
